<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grisBlack"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_logoReel"
        android:layout_width="265dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        />

    <LinearLayout
        android:id="@id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logoReel"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv_iniciaSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logoReel"
        app:layout_constraintBottom_toTopOf="@+id/iv_logoPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:fontFamily="@font/litteratextbold"
        android:layout_marginTop="35dp"
        android:text="@string/tituloinicio"
        android:textSize="34sp"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/iv_logoPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_iniciaSesion"
        app:layout_constraintBottom_toTopOf="@+id/tv_nombreU"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_icon"
        />
    <TextView
        android:id="@+id/tv_nombreU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logoPerfil"
        app:layout_constraintBottom_toTopOf="@+id/et_nombreusuario"
        android:fontFamily="@font/litteratextbold"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_usuario"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:drawableLeftCompat="@drawable/ic_baseline_person_24"
        />

    <EditText
        android:id="@+id/et_nombreusuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nombreU"
        app:layout_constraintBottom_toTopOf="@+id/btn_olvidarU"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:inputType="text"
        android:background="@drawable/round_button_gris"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_olvidarU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_nombreusuario"
        app:layout_constraintBottom_toTopOf="@+id/tv_contrasenia"
        android:layout_width="230dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:textSize="13sp"
        android:background="@color/grisBlack"
        android:hint="@string/olvidasteU"
        android:textColorHint="@color/white"
        android:fontFamily="@font/litteratextbold"
        android:layout_gravity="center"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tv_contrasenia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_olvidarU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:drawablePadding="5dp"
        android:text="@string/contra"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/litteratextbold"
        app:drawableLeftCompat="@drawable/ic_baseline_lock_24" />


    <EditText
        android:id="@+id/textContra"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_button_gris"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_contrasenia" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_olvidarC"
        android:layout_width="219dp"
        android:layout_height="19dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/grisBlack"
        android:fontFamily="@font/litteratextbold"
        android:hint="@string/olvidate_contraseña"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textContra" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/litteratextbold"
        android:text="@string/ingresar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_olvidarC" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnR"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/litteratextbold"
        android:text="@string/registra"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>